Revision history for Ocsinventory::Agent

       * Add blueprint Add installation date in the report of the installed software
       * Add blueprint Display UUID value in the hardware Table
       * Fix Bug #1247190 about default gateway as gateway for all interfaces under Linux
       * Add new screen code for edid (PTS)
       * Add new module to retrieve Nvidia cards
       * Add new file to detect CentOS distro
       * Add new module to retrieve virtual machines on vmware workstation
       * Return corrected values for storage under Fedora 19
       * Fix Bug #1247190 about default gateway as gateway for all interfaces under Linux
       * Add new screen code for edid (PTS)
       * Add new module to retrieve Nvidia cards
       * Add new file to detect CentOS distro
       * Add new module to retrieve virtual machines on vmware workstation
       * Return corrected values for storage under Fedora 19
       * Fix Bug #1206514 Enhance modules loading to allow directories
       * Fix a bug in Common.pm about processes data marked as virtualmachines data
       * Fix Bug #1216935 about Mac user agent not generating UUID
       * Fix Bug #1237682 about RPM.pm INSTALLDATE format not always accepted by MySQL
       * Retrieve the speed of network card
       * Add a new log message when unable to scan a SNMP devices in Snmp.pm
       * Fix problem fix IP address tests in Snmp.pm
       * Remove "-pP" option passed to nmap in Snmp.pm
       * New module to retrieve NetApp devices using SNMP
       * New module to retrieve Sun devices using SNMP
       * Add new value to BIOS.pm
       * Fix bug CUPS.pm and Usb.pm
       * Retrieve new values for CPU
       * Update memconf command to latest version
       * Fix bugs with usb in Lsusb.pm and Common.pm
       * Add retrieve usb connected devices
       * Fix Bug #1198088 wrong data for processors under 2.1 RC1
       * Fix bug with SNMP v3 in 9.pm
       * Fix bug with custom network scanning in Snmp.pm